[gd_scene load_steps=7 format=3 uid="uid://d27ue4fejbls5"]

[ext_resource type="Script" uid="uid://bhexjusik2ejx" path="res://Scripts/UI/pause_menu.gd" id="1_8rf44"]
[ext_resource type="Theme" uid="uid://reta3c3dnyho" path="res://Resources/Themes/button.tres" id="1_rrvs5"]
[ext_resource type="Texture2D" uid="uid://bfwipt4dftc0k" path="res://Assets/Sprites/Exported/HUD/Cursors/pointer_cursor-menor.png" id="2_oykix"]
[ext_resource type="Texture2D" uid="uid://db5nee7j2dml4" path="res://Assets/Sprites/Exported/HUD/Cursors/default_cursor-menor.png" id="3_kdnb7"]

[sub_resource type="InputEventAction" id="InputEventAction_8rf44"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_r2i2h"]
events = [SubResource("InputEventAction_8rf44")]

[node name="pause_menu" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1_8rf44")
interaction_cursor = ExtResource("2_oykix")
default_cursor = ExtResource("3_kdnb7")

[node name="bg_overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.545098)

[node name="menu_holder" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -33.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="resume_button" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("1_rrvs5")
shortcut = SubResource("Shortcut_r2i2h")
text = "Resume"

[node name="quit_button" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("1_rrvs5")
text = "Quit game"

[connection signal="pressed" from="menu_holder/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="menu_holder/quit_button" to="." method="_on_quit_button_2_pressed"]
